--- a/.github/workflows/swa-main.yml
+++ b/.github/workflows/swa-main.yml
@@ -16,7 +16,7 @@ jobs:
       NEXT_PUBLIC_GISCUS_CATEGORY: ${{ vars.NEXT_PUBLIC_GISCUS_CATEGORY }}
       NEXT_PUBLIC_GISCUS_CATEGORY_ID: ${{ vars.NEXT_PUBLIC_GISCUS_CATEGORY_ID }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: true
           lfs: false
@@ -30,10 +30,11 @@ jobs:
               - 'src/**'
 
       - name: Use Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: "20.x"
           cache: "npm"
+          cache-dependency-path: "src/package-lock.json"
 
       - name: run npm commands
         working-directory: src
