--- a/.github/workflows/swa-main.yml
+++ b/.github/workflows/swa-main.yml
@@ -78,7 +78,7 @@ jobs:
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            APIKEY=$(az staticwebapp secrets list --name ${{ secrets.SWA_APP_NAME }} | jq -r '.properties.apiKey')
+            APIKEY=$(az staticwebapp secrets list --name ${{ vars.SWA_APP_NAME }} | jq -r '.properties.apiKey')
             echo "STATIC_DEPLOYMENT_TOKEN=$APIKEY" >> $GITHUB_ENV
 
       - name: Deploy to Staging
@@ -123,7 +123,7 @@ jobs:
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            APIKEY=$(az staticwebapp secrets list --name ${{ secrets.SWA_APP_NAME }} | jq -r '.properties.apiKey')
+            APIKEY=$(az staticwebapp secrets list --name ${{ vars.SWA_APP_NAME }} | jq -r '.properties.apiKey')
             echo "STATIC_DEPLOYMENT_TOKEN=$APIKEY" >> $GITHUB_ENV
 
       - name: Deploy to Prod
