--- a/.github/workflows/swa-main.yml
+++ b/.github/workflows/swa-main.yml
@@ -8,15 +8,11 @@ on:
 jobs:
   changes:
     runs-on: ubuntu-latest
-    # Required permissions
-    permissions:
-      pull-requests: read
-    # Set job outputs to values from filter step
     outputs:
       infra: ${{ steps.filter.outputs.infra }}
       src: ${{ steps.filter.outputs.src }}
     steps:
-      # For pull requests it's not necessary to checkout the code
+      - uses: actions/checkout@v4
       - uses: dorny/paths-filter@v3
         id: filter
         with:
