amend next-js swa article

--- a/.github/workflows/swa-main.yml
+++ b/.github/workflows/swa-main.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  changes:
+  validate_entry:
     runs-on: ubuntu-latest
     outputs:
       infra: ${{ steps.filter.outputs.infra }}
@@ -23,14 +23,14 @@ jobs:
                - 'src/**'
 
   deploy_base_infra:
-    needs: changes
-    if: ${{ needs.changes.outputs.infra == 'true' || needs.changes.outputs.src == 'true' }}
+    needs: validate_entry
+    if: needs.changes.outputs.infra == 'true' || needs.changes.outputs.src == 'true'
     secrets: inherit
     uses: ./.github/workflows/base_infra_swa.yml
 
   build_job:
     needs: deploy_base_infra
-    if: ${{ needs.changes.outputs.src == 'true' }}
+    if: needs.validate_entry.outputs.src == 'true'
     runs-on: ubuntu-latest
     name: Build Job
     env:
