--- a/.github/workflows/swa-pr.yml
+++ b/.github/workflows/swa-pr.yml
@@ -63,6 +63,7 @@ jobs:
         with:
           node-version: "20.x"
           cache: "npm"
+          cache-dependency-path: "src/package-lock.json"
 
       - name: run npm commands
         working-directory: src
