--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       PLAYWRIGHT_TEST_BASE_URL: ${{ inputs.baseUrl }}
-      PLAYWRIGHT_TEST_USE_EXTERNAL: ${{ inputs.useExernal }}
+      PLAYWRIGHT_TEST_USE_EXTERNAL: ${{ inputs.useExternal }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
