--- a/.github/workflows/cloudflare-pr.yml
+++ b/.github/workflows/cloudflare-pr.yml
@@ -1,6 +1,8 @@
-name: Build and Push to Static Web App (Main)
+name: Build and Push to Cloudflare Pages (PR)
+
 on:
-  push:
+  pull_request:
+    types: [opened, synchronize, reopened, closed]
     branches:
       - main
 
@@ -19,10 +21,10 @@ jobs:
                - 'src/**'
 
   build_job:
-    needs: validate_entry
-    if: needs.validate_entry.outputs.src
+    if: github.event_name == 'pull_request' && github.event.action != 'closed' && needs.validate_entry.outputs.src
     runs-on: ubuntu-latest
     name: Build Job
+    needs: validate_entry
     env:
       NEXT_UMAMI_ID: ${{ secrets.NEXT_UMAMI_ID }}
       NEXT_PUBLIC_GISCUS_REPO: ${{ vars.NEXT_PUBLIC_GISCUS_REPO }}
@@ -30,13 +32,21 @@ jobs:
       NEXT_PUBLIC_GISCUS_CATEGORY: ${{ vars.NEXT_PUBLIC_GISCUS_CATEGORY }}
       NEXT_PUBLIC_GISCUS_CATEGORY_ID: ${{ vars.NEXT_PUBLIC_GISCUS_CATEGORY_ID }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
         with:
           submodules: true
           lfs: false
 
+      - name: "Only run if code (not infra) has changed"
+        uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            src:
+              - 'src/**'
+
       - name: Use Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
           node-version: "20.x"
           cache: "npm"
@@ -59,48 +69,11 @@ jobs:
     secrets: inherit
     uses: ./.github/workflows/jest.yml
 
-  deploy_to_staging:
+  deploy_to_preview:
+    if: github.event_name == 'pull_request' && github.event.action != 'closed'
+    runs-on: ubuntu-latest
     needs: run_integration_tests
-    runs-on: ubuntu-latest
-    name: Deploy to Staging
-    environment: staging
-    steps:
-      - name: Download build
-        uses: actions/download-artifact@v4
-        with:
-          name: build
-          path: build
-
-      - name: Publish to Cloudflare Pages
-        uses: cloudflare/pages-action@v1
-        id: deploy_to_staging
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ vars.CLOUDFLARE_ACCOUNT_ID }}
-          projectName: ${{ vars.CLOUDFLARE_PROJECT_NAME }}
-          directory: build
-          # Optional: Enable this if you want to have GitHub Deployments triggered
-          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
-          # Optional: Switch what branch you are publishing to.
-          # By default this will be the branch which triggered this workflow
-          branch: staging
-        
-    outputs:
-      staging_url: ${{ steps.deploy_to_staging.outputs.url }}
-
-  run_e2e_tests_staging:
-    needs: deploy_to_staging
-    secrets: inherit
-    uses: ./.github/workflows/playwright.yml
-    with:
-      baseUrl: ${{ needs.deploy_to_staging.outputs.staging_url }}
-      useExternal: true
-
-  deploy_to_production:
-    runs-on: ubuntu-latest
-    needs: run_e2e_tests_staging
-    name: Deploy to Production
-    environment: production
+    name: Deploy to Preview
     steps:
       - name: Download build
         uses: actions/download-artifact@v4
@@ -116,4 +89,3 @@ jobs:
           projectName: ${{ vars.CLOUDFLARE_PROJECT_NAME }}
           directory: build
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
-          branch: main
