--- a/.github/workflows/swa-pr.yml
+++ b/.github/workflows/swa-pr.yml
@@ -1,10 +1,7 @@
 name: Build and Push to Static Web App (PR)
 
 on:
-  pull_request:
-    types: [opened, synchronize, reopened, closed]
-    branches:
-      - main
+  workflow_dispatch
 
 jobs:
   validate_entry:
