--- a/src/data/workflows/swa-pr.yml
+++ b/src/data/workflows/swa-pr.yml
@@ -26,7 +26,7 @@ jobs:
   validate_bicep:
     secrets: inherit
     needs: validate_entry
-    if: github.event_name == 'pull_request' && github.event.action != 'closed' && needs.validate_entry.outputs.infra == true
+    if: github.event_name == 'pull_request' && github.event.action != 'closed' && needs.validate_entry.outputs.infra == 'true'
     uses: ./.github/workflows/bicep_what_if.yml
     with:
       bicepMainPath: "./infra/swa/main.bicep"
@@ -34,7 +34,7 @@ jobs:
       resourceGroup: ${{ vars.SWA_RG }}
 
   build_job:
-    if: github.event_name == 'pull_request' && github.event.action != 'closed' && needs.validate_entry.outputs.src == true
+    if: github.event_name == 'pull_request' && github.event.action != 'closed' && needs.validate_entry.outputs.src == 'true'
     runs-on: ubuntu-latest
     name: Build Job
     needs: validate_entry
